# synacor-challenge

./: .gitignore  README.md
var1/: README.md  arch-spec
var1/solution/: codes.txt  compile_test.py
var1/solution/synacor_challenge_v1/: Cargo.toml  output.txt  vm_state.txt
var1/solution/synacor_challenge_v1/src/: aux.rs  config.rs  dot_graph.rs  lib.rs  main.rs  maze_analyzer.rs  output_parser.rs
var2/: ._README.md
