[package]
name = "synacor_challenge_v1"
version = "0.1.0"
edition = "2024"
default-run = "synacor_challenge_v1"

[dependencies]
clap = { version = "4.5.54", features = ["derive", "color"] }
colored = "3.0.0"
derivative = "2.2.0"
env_logger = "0.11.8"
log = "0.4.29"
regex = "1.12.2"
petgraph = "0.8.3"
[[bin]]
name = "vm"
